<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/nav_item_1" />
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/nav_item_2" />
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_item_3" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:icon="@android:drawable/ic_btn_speak_now"
                android:title="@string/nav_sub_menu_1"/>

            <item
                android:icon="@android:drawable/ic_delete"
                android:title="@string/nav_sub_menu_2"/>
        </menu>
    </item>

</menu>